# conlang-akirillo

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md  build.rs
.resources/: license_header
ast/: Cargo.toml  README.md
ast/src/: assignment.rs  constant.rs  constraint.rs  lib.rs  linear_combination.rs  program.rs  term.rs  variable.rs
compiler/: Cargo.toml  README.md
compiler/src/: compiler.rs  evaluator.rs  lib.rs
conlang/: README.md  lib.rs  main.rs
conlang/commands/: mod.rs  run.rs
errors/: Cargo.toml  README.md
errors/src/: lib.rs
errors/src/common/: backtraced.rs  formatted.rs  macros.rs  mod.rs  traits.rs
errors/src/emitter/: mod.rs
errors/src/errors/: mod.rs
errors/src/errors/ast/: ast_errors.rs  mod.rs
errors/src/errors/cli/: cli_errors.rs  mod.rs
errors/src/errors/compiler/: compiler_errors.rs  mod.rs
errors/src/errors/input/: input_errors.rs  mod.rs
errors/src/errors/parser/: mod.rs  parser_errors.rs
errors/src/errors/type_checker/: mod.rs  type_checker_error.rs
examples/bad/: assignment.in  main.conlang
examples/helloworld/: assignment.in  main.conlang
parser/: Cargo.toml  README.md
parser/src/: lib.rs
parser/src/parser/: context.rs  input.rs  mod.rs  program.rs
parser/src/tokenizer/: lexer.rs  mod.rs  token.rs
passes/: Cargo.toml  README.md
passes/src/: lib.rs  pass.rs  reconstructor.rs  replacer.rs  visitor.rs
span/: Cargo.toml  README.md
span/src/: lib.rs  session_globals.rs  source_map.rs  span.rs  span_json.rs
