[package]
name = "conlang-errors"
version = "0.1.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Errors for the conlang DSL"
keywords = [
  "cryptography",
  "conlang",
  "programming-language",
  "r1cs",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"
rust-version = "1.65"

[dependencies.conlang-span]
path = "../span"
version = "0.1.0"

[dependencies.anyhow]
version = "1.0"

[dependencies.backtrace]
version = "0.3.67"

[dependencies.colored]
version = "2.0.0"

[dependencies.color-backtrace]
version = "0.5.1"

[dependencies.derivative]
version = "2.2.0"

[dependencies.serde]
version = "1.0.158"
features = [ "derive", "rc" ]

[dependencies.thiserror]
version = "1.0.39"
