[package]
name = "conlang-parser"
version = "0.1.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Parser for the conlang DSL"
keywords = [
  "cryptography",
  "conlang",
  "programming-language",
  "r1cs",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"
rust-version = "1.65"

[dependencies.conlang-ast]
path = "../ast"
version = "0.1.0"

[dependencies.conlang-errors]
path = "../errors"
version = "0.1.0"

[dependencies.conlang-span]
path = "../span"
version = "0.1.0"

[dependencies.clap]
version = "3.2"
features = [ "derive" ]

[dependencies.indexmap]
version = "1.9"

[dependencies.lazy_static]
version = "1.3.0"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.smallvec]
version = "1.10"

[dependencies.tracing]
version = "0.1"

[dev-dependencies.serde_json]
version = "1.0"
features = [ "preserve_order" ]

[dev-dependencies.serde_yaml]
version = "0.8"
